--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -1,13 +1,10 @@
 /* General carousel styling */
 .carousel {
   position: relative;
-  width: 98%;
+  width: 100%;
   margin-bottom: 5rem;
   height: 80vh;
-  background: url("/assets/pexels-apasaric-1694000.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #eae9ff;
 }
 
 .header {
