--- a/src/styles/Sponser.css
+++ b/src/styles/Sponser.css
@@ -1,77 +1,86 @@
 /* Sponsor Section */
 .sponser {
-    background-color: #eae9ff;
-    color: #770fb3;
-    height: 100vh;
-    position: relative;
+  background-color: #eae9ff;
+  color: #770fb3;
+  height: 100vh;
+  position: relative;
 }
 
 /* Sponsor Header */
 .sponser-header {
-    padding: 2rem;
+  padding: 2rem;
 }
 .sponser-header > h1 {
-    font-size: 3.2rem;
-    padding-left: 12rem;
+  font-size: 3.2rem;
+  padding-left: 12rem;
 }
 
 /* Sponsor Body */
 .sponser-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
 }
 
 /* General Card Styling */
-.knowledge-card, .education-card1, .education-card2 {
-    width: 70vw;
-    height: 50vh;
-    text-align: center;
-    position: absolute;
-    transition: opacity 0.5s ease, transform 0.5s ease;
-    overflow: hidden;
-    border-radius: 10px;
+.knowledge-card,
+.education-card1,
+.education-card2 {
+  width: 70vw;
+  height: 50vh;
+  text-align: center;
+  position: absolute;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  overflow: hidden;
+  border-radius: 10px;
 }
-.knowledge-card{
-    background-color: #f6f6f6;
+.knowledge-card {
+  background-color: #f6f6f6;
 }
-.education-card1{
-    background-color: #e6e4ff;
+.education-card1 {
+  background-color: #e6e4ff;
 }
-.education-card2{
-    background-color: #efd4ff;
+.education-card2 {
+  background-color: #efd4ff;
 }
 
-.knowledge-card h1, .education-card1 h1, .education-card2 h1 {
-    padding: 1rem 0;
-    font-size: 2.5rem;
+.knowledge-card h1,
+.education-card1 h1,
+.education-card2 h1 {
+  padding: 1rem 0;
+  font-size: 2.5rem;
 }
 
 /* Hide the rest of the card except h1 */
-.knowledge-card p, .education-card1 p , .education-card2 p{
-    opacity: 1;
-    transition: opacity 0.5s ease;
-    font-size: 2rem;
+.knowledge-card p,
+.education-card1 p,
+.education-card2 p {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+  font-size: 2rem;
 }
 /* Adjust Positioning for Overlap */
 .knowledge-card {
-    top: 0; /* Move it down slightly */
-    z-index: 1;
+  top: 0; /* Move it down slightly */
+  z-index: 1;
 }
 .education-card1 {
-    top: 5rem; /* Education card stays at the top */
-    z-index: 2;
+  top: 5rem; /* Education card stays at the top */
+  z-index: 2;
 }
 .education-card2 {
-    top: 10rem; /* Education card stays at the top */
-    z-index: 3;
+  top: 10rem; /* Education card stays at the top */
+  z-index: 3;
 }
 
 /* Hover Effect: Show the card when hovered */
-.knowledge-card:hover, .education-card1:hover ,.education-card2:hover{
-    opacity: 1;
-    transform: scale(1.05);
-    z-index: 10;
+.knowledge-card:hover,
+.education-card1:hover,
+.education-card2:hover {
+  opacity: 1;
+  transform: scale(1.05);
+  z-index: 10;
+  cursor: pointer;
 }
