--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 /* Footer Base Styles */
 .footer {
-  background-color: black;
+  background-color: #EAE9FF;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,22 +11,23 @@
 .top-line {
   height: 1px;
   width: 90vw;
-  background-color: #e2e2e2;
+  background-color: black;
 }
 
 /* Footer Links */
 .links {
-  width: 90vw;
+  width: 40vw;
   height: 10vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap; /* Allows wrapping for smaller screens */
+  flex-wrap: wrap;
+  /* Allows wrapping for smaller screens */
 }
 
 .links a {
   text-decoration: none;
-  color: #e2e2e2;
+  color: black;
   font-size: 1.2rem;
   font-weight: 600;
   position: relative;
@@ -39,7 +40,7 @@
   left: 0;
   bottom: 0;
   width: 0;
-  background-color: #e2e2e2;
+  background-color: #770FB3;
   transition: width 0.3s ease;
 }
 
@@ -49,7 +50,7 @@
 
 /* Footer Content Section */
 .footer-body {
-  height: 40vh;
+  /* height: 40vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,14 +59,14 @@
 
 .content {
   width: 50vw;
-  height: 30vh;
-  margin: 5vh;
+  /* height: 30vh; */
+  margin: 2vh;
   text-align: center;
 }
 
 .content img {
   width: 15vw;
-  height: 30vh;
+  /* height: 30vh; */
 }
 
 /* Copyright Section */
@@ -74,22 +75,22 @@
 }
 
 .copyright p {
-  color: #e2e2e2;
-  font-size: 1.1rem;
-  font-weight: 600;
+  color: #000000;
+  font-size: 1rem;
+  font-weight: 300;
 }
 
 /* Social Media or External Links */
 a {
-  color: white;
+  color: #770FB3;
   font-size: 2.5rem;
   margin: 1rem;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 a:hover {
   transform: translateY(-5px);
-  color: lightblue;
+  color: #827DFF;
 }
 
 /* Responsive Styles for Tablets and Smaller Screens */
@@ -109,11 +110,13 @@ a:hover {
   }
 
   .links {
-    flex-wrap: wrap; /* Make sure links wrap well */
+    flex-wrap: wrap;
+    /* Make sure links wrap well */
   }
 
   .footer-body {
-    height: auto; /* Adjust footer height for tablets */
+    height: auto;
+    /* Adjust footer height for tablets */
   }
 }
 
@@ -126,7 +129,8 @@ a:hover {
   .links {
     flex-direction: column;
     height: auto;
-    align-items: center; /* Ensure links are centered */
+    align-items: center;
+    /* Ensure links are centered */
   }
 
   .links a {
@@ -154,6 +158,7 @@ a:hover {
 
   .footer-body {
     height: auto;
-    margin-top: 2rem; /* Ensure footer body has proper margin */
+    margin-top: 2rem;
+    /* Ensure footer body has proper margin */
   }
 }
