--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -24,7 +24,7 @@ h1 {
   width: 350px;
   height: 300px;
   margin: 20px;
-  background-color: #f0f0f0;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
