--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -11,13 +11,13 @@
 }
 
 h1 {
+  font-size: 3.5rem;
   margin-bottom: 30px;
 }
 
 .themes-row {
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
 }
 
 .theme-card {
