--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -5,11 +5,10 @@
   box-sizing: border-box;
   overflow: hidden; /* Hide overflow to prevent showing previous guests */
 }
-
 .component-heading {
   text-align: center;
   margin-bottom: 40px; /* Increased margin for more space */
-  font-size: 36px; /* Make heading larger */
+  font-size: 3.5rem; /* Make heading larger */
   font-weight: bold; /* Make the heading bold */
 }
 
