--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   overflow: hidden; /* Hide overflow to prevent showing previous guests */
 }
+
 .component-heading {
   text-align: center;
   margin-bottom: 40px; /* Increased margin for more space */
@@ -51,20 +52,31 @@
 }
 
 .image-section {
-  flex: 1.5; /* Take less space for image */
+  flex: 1.3; /* Ensure it takes less space compared to text */
   background-color: #afaddf;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
+  justify-content: center; /* Ensure the image stays centered horizontally */
+  align-items: center; /* Ensure the image stays centered vertically */
+  padding: 35px;
   border-radius: 8px;
+  position: relative;
+  overflow: hidden; /* Prevents overflow due to transformations */
 }
 
 .guest-image {
-  max-width: 80%; /* Make image smaller */
+  max-width: 100%; /* Ensure it doesn't exceed parent width */
   height: auto;
   border-radius: 8px;
+  transition: transform 0.3s ease; /* Smooth transition */
 }
+
+.magnetic {
+  display: inline-block;
+  position: relative; /* Keeps image in place during hover */
+  will-change: transform; /* Optimizes animation */
+  z-index: 1; /* Keeps image on top */
+}
+
 
 /* Animation Keyframes */
 @keyframes fadeIn {
