--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -98,9 +98,9 @@
   padding: 1.5rem;
   color: black;
   z-index: 2000;
-  display: block;
-  /* Visible only on mobile */
+  display: block; /* Visible only on mobile */
 }
+
 
 .hamburger.hide {
   display: none;
@@ -156,6 +156,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  width: 100%;
 }
 
 .menu-links .nav-link {
@@ -168,6 +169,12 @@
   text-align: center;
   width: 100%;
   transition: all 0.3s ease;
+  position: relative;
+}
+
+/* Add black border between each menu item */
+.menu-links .nav-link:not(:last-child) {
+  border-bottom: 2px solid black; /* Add a black line between menu items */
 }
 
 .menu-links .nav-link:hover {
