--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -4,6 +4,7 @@
   padding: 20px;
   box-sizing: border-box;
   overflow: hidden; /* Hide overflow to prevent showing previous guests */
+  position: relative; /* Position relative to allow positioning of arrows */
 }
 
 .component-heading {
@@ -77,6 +78,28 @@
   z-index: 1; /* Keeps image on top */
 }
 
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 3rem;
+  color: #333;
+  cursor: pointer;
+  z-index: 10;
+  bottom: 50%;
+}
+
+.left-arrow {
+  left: 10px;
+}
+
+.right-arrow {
+  right: 10px;
+}
+
+.arrow:hover {
+  color: #666; /* Change color on hover */
+}
 
 /* Animation Keyframes */
 @keyframes fadeIn {
@@ -124,15 +147,20 @@
     text-align: center; /* Center text */
     height: 300px;
   }
+
   .guest-name {
-    font-size: 20px; /* Increase name size for visibility */
+    font-size: 20px; /* Adjust name size for visibility */
     margin-bottom: 10px;
   }
-  
+
   .guest-description {
-    font-size: 11px; /* Set description size */
+    font-size: 11px; /* Adjust description size */
     line-height: 1.5; /* Line height for better readability */
     max-height: 10.5em; /* Limit to 7 lines (approx.) */
     overflow: hidden; /* Hide overflow */
+  }
+
+  .arrow {
+    font-size: 2rem; /* Adjust arrow size for smaller screens */
   }
 }
