--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -11,7 +11,7 @@
   text-align: center;
   margin-bottom: 40px; /* Increased margin for more space */
   font-size: 3.5rem; /* Make heading larger */
-  font-weight: bold; /* Make the heading bold */
+  font-weight: 500; /* Make the heading bold */
 }
 
 .guest-wrapper {
@@ -146,6 +146,10 @@
     align-items: center; /* Center horizontally */
     text-align: center; /* Center text */
     height: 300px;
+  }
+
+  .component-heading{
+    font-weight: 400;
   }
 
   .guest-name {
