--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #eae9ff;
+}
 .team{
     text-align: center;
     width: 100vw;
@@ -14,6 +17,7 @@
 .first{
     margin: 0;
     padding-top: 5rem;
+    font-weight: 400;
 }
 .second{
     margin: 0;
