--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -102,6 +102,7 @@
   font-size: 5vh;
   cursor: pointer;
   padding: 1.5rem;
+  padding-right: 4%;
   color: black;
   z-index: 2000;
   display: block;
