--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -50,7 +50,7 @@
   transition: all 0.3s ease;
 }
 
-.nav-link a {
+.nav-links a {
   text-decoration: none;
   font-size: 2vh;
   font-weight: 500;
@@ -243,7 +243,7 @@
   }
 
   .nav-link {
-    font-weight: 300;
+    font-weight: 400;
     border: solid 1px #B0B0B0;
     border-radius: 2rem;
     background-color: white;
