--- a/src/styles/Faq.css
+++ b/src/styles/Faq.css
@@ -2,10 +2,11 @@
 .faq {
   padding: 5%;
   padding-top: 2%;
-  height: 85vh;
+  height: 90vh;
   background-color: #eae9ff;
   text-align: center;
   width: 100vw;
+  margin-bottom: 5rem;
 }
 
 .faq > h1 {
@@ -105,7 +106,7 @@
 
   .faq > h1 {
     font-size: 3rem;
-    font-weight: 400;/* Reduce heading size for tablets */
+    font-weight: 400; /* Reduce heading size for tablets */
   }
 
   .faq .accordion-button {
