--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -1,26 +1,34 @@
-body{
-    background-color: #eae9ff;
+body {
+  background-color: #eae9ff;
 }
-.team{
-    text-align: center;
-    width: 100vw;
+.team {
+  text-align: center;
+  width: 100vw;
+  margin-bottom: 5rem;
 }
-.heading1{
-    height: 20vh;
+.heading1 {
+  height: 15vh;
 }
-.heading1 h1{
-    padding-top: 15vh;
+.heading1 h1 {
+  padding-top: 15vh;
 }
-.heading2{
-    height: 30vh;
+.heading2 {
+  height: 30vh;
 }
-.first{
-    margin: 0;
-    padding-top: 5rem;
-    font-weight: 400;
+.first {
+  margin: 0;
+  padding-top: 5rem;
+  font-weight: 400;
 }
-.second{
-    margin: 0;
-    font-weight: 350;
+.second {
+  margin: 0;
+  font-weight: 350;
 }
-
+@media (max-width: 768px) {
+  .heading2{
+    height: auto;
+  }
+  .second{
+    margin-bottom: 5rem;
+  }
+}
