--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -310,7 +310,7 @@
     border-radius: 2rem;
     background-color: white;
     font-size: 2vh;
-    padding: 1vh 3.5vh;
+    padding: 1vh 1.4vw;
     cursor: pointer;
   }
 
