--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -25,7 +25,7 @@
   transform: translateY(0);
 }
 
-.nav-left img {
+.nav-left>a>img {
   height: 5vw;
   margin-left: 4%;
 }
@@ -216,7 +216,7 @@
     margin-left: 4%;
   }
 
-  .nav-left img {
+  .nav-left>a>img {
     height: 9vw;
   }
 
@@ -286,7 +286,7 @@
     padding: 0 0 0 4%;
   }
 
-  .nav-left>img {
+  .nav-left>a>img {
     height: 7vh;
     margin: 0;
   }
